@@ -218,8 +218,6 @@ public:
 	
 	wxSocketServer *m_ECServer;
 	ECNotifier *m_ec_notifier;
-	
-	static CECPacket *Authenticate(const CECPacket *);
 
 	void AddSocket(CECServerSocket *s);
 	void RemoveSocket(CECServerSocket *s);
